force-app/main/default/objects/WTA_Assignment__c/WTA_Assignment__c.object-meta.xml
<CustomObject>
    <label>WTA Assignment</label>
    <nameField>
        <label>WTA Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WTA Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>