force-app/main/default/objects/WTA_Assignment__c/fields/Agent_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Campaign_Name__c</fullName>
    <formula>User__r.Cloud_Agent_Campaign_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Campaign Name</label>
    <type>Text</type>
</CustomField>