force-app/main/default/objects/WTA_Assignment__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Email</label>
    <type>Text</type>
</CustomField>