force-app/main/default/objects/WTA_Assignment__c/fields/City_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Campaign_Name__c</fullName>
    <label>City_Campaign Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLR_AutoLead</fullName>
            </value>
            <value>
                <fullName>BLR-AutoLead-Pool2</fullName>
            </value>
            <value>
                <fullName>CHN_AutoLead-Pool2</fullName>
            </value>
            <value>
                <fullName>HYD_AutoLead-Pool2</fullName>
            </value>
            <value>
                <fullName>Kolkata_AutoLead-Pool2</fullName>
            </value>
            <value>
                <fullName>MUM_AutoLead-Pool2</fullName>
            </value>
            <value>
                <fullName>Pune_AutoLead-Pool2</fullName>
            </value>
            <value>
                <fullName>NCR_AutoLead-Pool2</fullName>
            </value>
            <value>
                <fullName>HYD_AutoLead</fullName>
            </value>
            <value>
                <fullName>CHN_AutoLead</fullName>
            </value>
            <value>
                <fullName>NCR_AutoLead</fullName>
            </value>
            <value>
                <fullName>MUM_AutoLead</fullName>
            </value>
            <value>
                <fullName>Pune_AutoLead</fullName>
            </value>
            <value>
                <fullName>Kolkata_AutoLead</fullName>
            </value>
            <value>
                <fullName>Others_AutoLead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>