force-app/main/default/objects/WTA_Assignment__c/fields/Monthly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Limit__c</fullName>
    <label>Monthly Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>