force-app/main/default/objects/WTA_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WTA_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>