force-app/main/default/objects/WTA_Assignment__c/fields/Weekly_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Assignment__c</fullName>
    <label>Weekly Assignment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>